--- a/lafacult/lafacult.html
+++ b/lafacult/lafacult.html
@@ -48,7 +48,7 @@
         </div>
         <nav id="navbar" class="navbar">
           <ul class="d-flex">
-            <li><a class="getstarted scrollto" href="/PrimeirosPassosHTML/ProjetoIntegrador/index.html">Voltar &#x21A9;</a></li>
+            <li><a class="getstarted scrollto" href="/index.html">Voltar &#x21A9;</a></li>
           </ul>
         </nav>
       </div>
