alterações de links

--- a/salaconnect/salaconnect.html
+++ b/salaconnect/salaconnect.html
@@ -82,7 +82,7 @@
 	<body>
 		<header>
 			<nav>
-				<a href="/index.html">Voltar</a>
+				<a href="/pi/index.html">Voltar</a>
 			</nav>
 			<h1>Sala Connect</h1>
 		</header>
