--- a/resgato/resgato.html
+++ b/resgato/resgato.html
@@ -15,7 +15,7 @@
         </style>
     </head>
     <body>
-        <a href="/index.html" type="button" class="btn btn-warning">Voltar</a>
+        <a href="/pi/index.html" type="button" class="btn btn-warning">Voltar</a>
         <img src="imagem.jpg" alt="">
     </body>
 </html>
