--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>PI - 0095</title>
+        <title>PI - 00009</title>
         <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <style>
@@ -61,13 +61,12 @@
     </head>
     <body>
         <div class="container1">
-            <p>Projeto Integrador - Turma 031.2021.0095</p>
+            <p>Projeto Integrador - Turma 031.2022.0009</p>
         </div>
 
         <div class="container2">
-            <a href="lafacult/lafacult.html" type="button" class="btn btn-outline-primary btn-lg">LafaCult</a>
-            <a href="resgato/resgato.html" type="button" class="btn btn-outline-primary btn-lg">Resgato</a>
-            <a href="salaconnect/salaconnect.html" type="button" class="btn btn-outline-primary btn-lg">SalaConnect</a>
+            <a href="caramelo/caramelo.html" type="button" class="btn btn-outline-primary btn-lg">Adote Caramelo</a>
+            <a href="#" type="button" class="btn btn-outline-primary btn-lg">Grupo 2</a>
         </div>
 
         <div class="container1">
@@ -82,7 +81,7 @@
                 loop: true,
             }).go();
             new TypeIt("#data", {
-                strings: "15/05/2023 - Início às 15:15",
+                strings: "29/06/2023 - Início às 10:15",
                 speed: 100,
                 loop: true,
             }).go();
