--- a/caramelo/caramelo.html
+++ b/caramelo/caramelo.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="#inicio">Inicio</a></li>
             <li><a href="#funcionalidades">Funcionalidades</a></li>
-            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="/pi/index.html" type="button" class="btn btn-warning">Voltar</a></li>
         </ul>
     </nav>
 
