--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="container2">
-            <a href="caramelo/caramelo.html" type="button" class="btn btn-outline-primary btn-lg">Adote Caramelo</a>
+            <a href="caramelo/caramelo.html" type="button" class="btn btn-outline-primary btn-lg">Adote<br>Caramelo</a>
             <a href="#" type="button" class="btn btn-outline-primary btn-lg">Grupo 2</a>
         </div>
 
