--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 margin: 20px;
                 color: rgb(255, 255, 255);
                 border-color: rgb(255, 255, 255);
-                width: 380px;
+                width: 480px;
             }
 
             .container2 a:hover {
@@ -65,7 +65,7 @@
         </div>
 
         <div class="container2">
-            <a href="caramelo/caramelo.html" type="button" class="btn btn-outline-primary btn-lg">Adote<br>Caramelo</a>
+            <a href="caramelo/caramelo.html" type="button" class="btn btn-outline-primary btn-lg">Adote Caramelo</a>
             <a href="#" type="button" class="btn btn-outline-primary btn-lg">Grupo 2</a>
         </div>
 
