--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="container2">
             <a href="caramelo/caramelo.html" type="button" class="btn btn-outline-primary btn-lg">Adote Caramelo</a>
-            <a href="#" type="button" class="btn btn-outline-primary btn-lg">Grupo 2</a>
+            <a href="cyberchase/cyberchase.html" type="button" class="btn btn-outline-primary btn-lg">CyberChase</a>
         </div>
 
         <div class="container1">
