--- a/cyberchase/cyberchase.html
+++ b/cyberchase/cyberchase.html
@@ -13,7 +13,7 @@
         </style>
 </head>
     <body>
-        
+        <a href="/pi/index.html" type="button" class="btn btn-warning">Voltar</a>
 
         <h1>CyberChase</h1>
         <h1 class="segunda">CyberChase</h1>
@@ -26,7 +26,7 @@
         </main>
 
         <h3>
-            Convidamos vocês para o nosso Projeto Integrador no dia 29/06, à partir das 10:00h na sala 03 da Unidade II (centro) 
+            Convidamos vocês para o nosso Projeto Integrador no dia 29/06, à partir das 10:15h na sala 03 da Unidade II (centro) 
         </h3>
 
         <h2>Aplicativo do Projeto</h2>
