--- a/cyberchase/cyberchase.html
+++ b/cyberchase/cyberchase.html
@@ -6,27 +6,27 @@
         <link rel="stylesheet"  href="teste.css">
         <script src="teste.js"></script>
         <style>
-            @font-face {
+            @font-face .btn {
                 font-family: "GlitchGoblin";
                 src: url("fontes/GlitchGoblin.ttf");
             }
         </style>
 </head>
     <body>
-        <a href="/pi/index.html" type="button" class="btn btn-warning">Voltar</a>
+        <a href="/pi/index.html" type="button" class="btn">Voltar</a>
 
         <h1>CyberChase</h1>
         <h1 class="segunda">CyberChase</h1>
 
         <script src="teste.js"></script>
         <main> 
-            A CyberChase é uma empresa de informática que teve inicio em um grupo do curso.<br> 
-            Nosso objetivo era trazer podutos de boa qualidade além de outros serviços da área de TI.<br>
+            A CyberChase é uma empresa de informatica que teve inicio em um grupo do curso.<br> 
+            Nosso objetivo era trazer podutos de boa qualidade além de outros serviços da area de TI.<br>
             Para ter um melhor atendimento nas nossas lojas foi desenvolvido um programa em Python para controle de estoque.
         </main>
 
         <h3>
-            Convidamos vocês para o nosso Projeto Integrador no dia 29/06, à partir das 10:15h na sala 03 da Unidade II (centro) 
+            Convidamos vocês para o nosso Projeto Integrador no dia 29/06, a partir das 10:15h na sala 03 da Unidade II (centro) 
         </h3>
 
         <h2>Aplicativo do Projeto</h2>
