--- a/cyberchase/cyberchase.html
+++ b/cyberchase/cyberchase.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet"  href="teste.css">
         <script src="teste.js"></script>
         <style>
-            @font-face .btn {
+            @font-face, .btn {
                 font-family: "GlitchGoblin";
                 src: url("fontes/GlitchGoblin.ttf");
             }
