--- a/cyberchase/cyberchase.html
+++ b/cyberchase/cyberchase.html
@@ -6,9 +6,12 @@
         <link rel="stylesheet"  href="teste.css">
         <script src="teste.js"></script>
         <style>
-            @font-face, .btn {
+            @font-face {
                 font-family: "GlitchGoblin";
                 src: url("fontes/GlitchGoblin.ttf");
+            }
+            .btn {
+                align-items: center;
             }
         </style>
 </head>
